test/error/adt1.stg
-- lowercase tycon
data foo = A | B;

